KubDeployment/secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-env-pod
spec:
  containers:
  - name: mycontainer
    image: olacontainerreg2.azurecr.io/gamedetailsimage:latest
  restartPolicy: Never
