KubDeployment/service.yaml
#service.yaml
apiVersion: v1
kind: Service
metadata:
  name: game-apiservice
spec:
  type: LoadBalancer
  selector:
    app: game-apidep
  ports:
    - port: 80 # SERVICE exposed port
      name: http # SERVICE port name
      protocol: TCP # The protocol the SERVICE will listen to
      targetPort: http # Port to forward to in the POD
